# vibe-light

./: .env.example  .gitignore  AGENTS.md  LICENSE  Makefile  README.en.md  README.md  TODO.md
.agents/rules/: docs-workflow.md  esp32-firmware.md  macos-desktop.md  project-architecture.md
.agents/skills/: docs-refresh.md
.codex/environments/: environment.toml
.github/workflows/: release-desktop.yml
docs/: architecture.md  desktop-firmware-flashing-handoff.md  desktop-firmware-flashing.md  hardware.md
projects/esp32/: CMakeLists.txt  README.md  sdkconfig.defaults
projects/esp32/main/: CMakeLists.txt  main.c  vibe_ble.c  vibe_ble.h  vibe_cjk_font.c  vibe_cjk_font.h  vibe_display.c  vibe_display.h  vibe_display_draw.c  vibe_display_draw.h  vibe_display_format.c  vibe_display_landscape.c  vibe_display_landscape.h  vibe_display_maze_data.c  vibe_display_maze_data.h  vibe_display_maze_text.c  vibe_display_maze_text.h  vibe_display_model.c  vibe_display_model.h  vibe_display_portrait.c  vibe_display_portrait.h  vibe_display_render.h  vibe_display_score.c  vibe_display_score.h  vibe_display_text.c  vibe_display_text.h  vibe_health.c  vibe_health.h  vibe_landscape_maze_data.c  vibe_landscape_maze_data.h  vibe_orientation.c  vibe_orientation.h  vibe_reference_maze.h  vibe_status.c  vibe_status.h
projects/esp32/tests/: run_status_parser_tests.sh  vibe_status_parser_test.c
projects/esp32/tools/: flash_firmware.sh  generate_cjk_font.py  package_firmware_bundle.py  package_firmware_tools.py  render_maze_preview.py
projects/macos/desktop/: Package.resolved  Package.swift
projects/macos/desktop/Sources/VibeLightApp/App/: AppResourceBundle.swift  AppUpdater.swift  VibeLightApp.swift
projects/macos/desktop/Sources/VibeLightApp/Models/: VibeLightAppModel.swift
projects/macos/desktop/Sources/VibeLightApp/Resources/: AppIcon.icns
projects/macos/desktop/Sources/VibeLightApp/Views/: CardTitle.swift  (+9 more)
projects/macos/desktop/Sources/VibeLightCore/: AgentInstaller.swift  CodexUsageResolver.swift  EventLog.swift  EventStore.swift  FirmwareFlashing.swift  HardwareDemoPacketHold.swift  HardwareDemoPacketScenario.swift  HardwareDevice.swift  HardwareReconnectPolicy.swift  SetupChecklist.swift  StatusModels.swift  StatusPacketCompactor.swift  TaskDetailFormatter.swift  TaskTracker.swift  VibeLightPreferences.swift
projects/macos/desktop/Sources/VibeLightHook/: main.swift
projects/macos/desktop/Tests/VibeLightCoreTests/: VibeLightCoreTests.swift
script/: build_and_run.sh  desktop_firmware_release_checklist.sh  desktop_release_notarized.sh  docs_check.sh  docs_refresh_context.sh  generate_desktop_appcast.sh  notary_credentials.sh  package_desktop_release.sh  prepare_desktop_firmware_release.sh  setup_env.sh  test_desktop_update_release.sh  verify.sh  verify_desktop_app_bundle.sh  verify_desktop_release_arch.sh
(+4 files in other folders)
